Inclusão da tarefa da semana 16/01/2022

--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "init:sass": "node-sass sass/main.scss css/main.css -w"
   },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/fabricio-th/tarefa_front_end_01.git"
   },
-  "author": "Fanuel Nunes <fanuel.nunes@caed.ufjf.br>",
+  "author": "Fabricio Oliveira",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/fabricio-th/tarefa_front_end_01/issues"
-  },
-  "homepage": "https://github.com/fabricio-th/tarefa_front_end_01#readme"
+  "dependencies": {
+    "node-sass": "^7.0.1"
+  }
 }
